--- a/xuecheng-plus-content/xuecheng-plus-content-api/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
     </dependencies>
 
 
